--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -10,8 +10,10 @@ body{
 }
 
 main{
-  width: fit-content;
+  
+  width:100%;
   padding: 20px;
+ 
 }
 .navbar{
   height: 65px;
@@ -37,10 +39,11 @@ main{
 }
 
 .main-content {
+  /* border: 2px solid rgb(244, 48, 4); */
   position: absolute;
   margin: 0;
   top: 64px;
-  height: 100dvh;
+  height: 90dvh;
   
   float: left;
   overflow-y: auto;
@@ -48,9 +51,11 @@ main{
 }
 
 .content {
-  height: 100dvh;
+ 
+  /* border: 5px solid greenyellow; */
+  width: 87dvw;
+  height: 89dvh;
   display: flex;
-
   flex-direction:column;
   font-size: 3em;
 }
