--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -117,6 +117,7 @@
         margin-left: 0px;
         /* border: 1px solid red; */
         width: 80dvw;
+        cursor: pointer;
     }
     
 }
