--- a/src/CSS/videopage.css
+++ b/src/CSS/videopage.css
@@ -1,20 +1,57 @@
 .videopage-body{
-/* border: 1px solid red; */
-margin-left: auto;
-margin-right: auto;
-width: 100%;
-height: 63dvh;
-padding: 2px;
-
+    width: 100%;
+    height: 100%;
+    border: 1px solid green;
+    margin: 0;
+    /* overflow-y: auto; */
+}
+.videoPage-LeftSection{
+    width: 70%;
+    height: 100%;
+}
+.bellow-video{
+    width: 100%;
+    height: 60px;
+    border: 1px solid rgb(6, 34, 197);
 }
 .play-video-div{
 /* border: 1px solid green; */
-width: 70%;
-height: 62dvh;
+width: 100%;
+height: fit-content;
 }
 .play-video{
+    border: 1px solid green;
 width: 100%;
-height: 100%;
+height: 65dvh;
 cursor: pointer;
+border-radius: 10px;
+background-color: black;
   
 }
+video::-webkit-media-controls-panel {
+   width: 100%;
+    height: 90px;
+   position: absolute;
+   bottom: 0;
+   background: transparent;
+  }
+  video::-webkit-media-controls-current-time-display,
+  video::-webkit-media-controls-time-remaining-display {
+      color: #07d6f1;
+      font-size: 14px;
+  }
+ /* Change the progress bar color to blue */
+/* Change the color of the video progress bar */
+video::-webkit-media-controls-progress-bar {
+    background-color: #3498db; /* Replace with your desired color */
+}
+.videoPage_downSection{
+    width: 100%;
+    height: 500px;
+    border: 2px solid red;
+}
+
+
+
+
+  
