--- a/src/CSS/videopage.css
+++ b/src/CSS/videopage.css
@@ -1,7 +1,7 @@
 .videopage-body{
     width: 100%;
     height: 100%;
-    border: 1px solid green;
+    /* border: 1px solid green; */
     margin: 0;
     /* overflow-y: auto; */
 }
@@ -9,42 +9,87 @@
     width: 70%;
     height: 100%;
 }
-.bellow-video{
-    width: 100%;
-    height: 60px;
-    border: 1px solid rgb(6, 34, 197);
-}
+/*  */
 .play-video-div{
-/* border: 1px solid green; */
-width: 100%;
-height: fit-content;
+    position: relative;
+border: 1px solid green;
+width: 95%;
+height: 65dvh;
+display: flex;
+justify-content: center;
+margin-inline: auto;
 }
 .play-video{
-    border: 1px solid green;
 width: 100%;
-height: 65dvh;
+/* height: 100%; */
 cursor: pointer;
 border-radius: 10px;
-background-color: black;
+/* background-color: black; */
   
 }
-video::-webkit-media-controls-panel {
-   width: 100%;
-    height: 90px;
-   position: absolute;
-   bottom: 0;
-   background: transparent;
-  }
-  video::-webkit-media-controls-current-time-display,
-  video::-webkit-media-controls-time-remaining-display {
-      color: #07d6f1;
-      font-size: 14px;
-  }
+.contrl-bars-div{
+    display: flex;
+ /* justify-content:center ;  */
+     align-items: center;
+    border: 1px solid rgb(4, 0, 128);
+    height: 60px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+    cursor: pointer;
+    background: transparent;
+    /* background-color: rgb(48, 47, 47); */
+}
+.play-video-div:hover .contrl-bars-div,
+.play-video-div:focus-within .contrl-bars-div,
+.play-video-div.paused .contrl-bars-div
+{
+    opacity: 1;
+}
+
+.contrl-bars-div .controls{
+    /* border: 1px solid red; */
+    /* height: 50px; */
+display: flex;
+gap: .5rem;
+padding: .25rem;
+align-items: center;
+}
+.contrl-bars-div .controls button{
+    background: none;
+    border: none;  
+    color: white;
+    padding: 0;
+    height: 30px;
+    width: 30px;
+    font-size: 1.1rem;
+    cursor: pointer;
+    opacity: .85;
+    transition: opacity 200ms ease-in-out;
+}
+.contrl-bars-div .controls button:hover{
+    opacity: 1;
+}
+.play-video-div.paused .pause-icon{
+    display: none;
+}
+.play-video-div:not(.paused) .play-icon{
+    display: none;
+}
+
+/* .video-play-paused-btn{
+    background: none;
+    border: none;
+    color: white;
+    height: 30px;
+} */
  /* Change the progress bar color to blue */
 /* Change the color of the video progress bar */
-video::-webkit-media-controls-progress-bar {
-    background-color: #3498db; /* Replace with your desired color */
-}
+
 .videoPage_downSection{
     width: 100%;
     height: 500px;
